# Kurz-AI-Studio

./: .env.example  .gitignore  CLAUDE.md  GPT_SETUP.md  PRESENTATION.md  QUICKSTART.md  README.md  WINDOWS_SETUP.md  docker-compose.yml  simple_test.ipynb  temp_layout_review_content.txt  test_modules.ipynb  voices.json
backend/: Dockerfile  Dockerfile.worker  alembic.ini  cloudbuild-worker.yaml  cloudbuild.yaml  docker-compose.yml  mm_voices.json  pyproject.toml  requirements.txt  run_local.sh
backend/alembic/: env.py
backend/alembic/versions/: 214434ea743b_add_youtube_refresh_token_and_youtube_.py  24d955d97ff3_add_google_id_and_profile_image_to_users.py  5828cfcf554d_create_users_table.py  ba0d48d168b2_add_runs_table.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py
backend/app/data/: README.md
backend/app/data/samples/: sample.csv  sample_characters.json  (+2 more)
backend/app/models/: __init__.py  run.py  user.py
backend/app/orchestrator/: __init__.py  fsm.py  router.py
backend/app/providers/: __init__.py
backend/app/routers/: auth.py  runs.py  youtube.py
backend/app/schemas/: json_layout.py  run_spec.py  user.py
backend/app/tasks/: composer.py  designer.py  director.py  plan.py  qa.py  recover.py  voice.py
backend/app/utils/: auth.py  csv_to_json.py  ffmpeg_renderer.py  fonts.py  json_converter.py  kling_client.py  logger.py  plot_csv_converter.py  plot_generator.py  progress.py  prompt_enhancer.py  security.py  seeds.py  sfx_tags.py
backend/notebooks/: pro_mode_test.ipynb
backend/scripts/: deploy-worker.sh
docs/: API.md  (+13 more)
(+60 files in other folders)
