[project]
name = "autoshorts"
version = "0.1.0"
description = "스토리텔링형 숏츠 자동 제작 시스템"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
